2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	* login/Makefile (pt_chown-cflags): Remove.
	* nscd/Makefile (CFLAGS-nscd): Likewise.
	* resolv/Makefile (CFLAGS-libresolv): Likewise.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	* elf/Makefile (CFLAGS-filtmod1.c): Use $(no-stack-protector) for
	non-libc-linking testcase.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>
	    Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    Florian Weimer  <fweimer@redhat.com>

	[BZ #7065]
	PLT avoidance for __stack_chk_fail*.
	* debug/Makefile (CFLAGS-stack_chk_fail.c)
	(CFLAGS-stack_chk_fail_local.c): Build without stack protector.
	* debug/stack_chk_fail.c (__stack_chk_fail): Add
	__stack_chk_fail_local alias.
	* sysdeps/generic/symbol-hacks.h [IS_IN (libc)]
	(__stack_chk_fail): Turn into hidden reference to
	__stack_chk_fail_local.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	* configure.ac: Add check for unsupported stack-protection level.
	(libc_cv_predef_stack_protector): Remove.
	(no_ssp): New variable.
	(STACK_PROTECTOR_LEVEL): Set to zero when --disable-stack-protector.
	(stack_protector): Set to -fno-stack-protector similarly.
	(libc_cv_ld_gnu_indirect_function): Use no_ssp.
	(libc_cv_asm_set_directive): Likewise.
	(libc_cv_protected_data): Likewise.
	(libc_cv_z_combreloc): Likewise.
	(libc_cv_hashstyle): Likewise.
	(libc_cv_has_glob_dat): Likewise.
	(libc_cv_output_format): Likewise.
	(libc_cv_output_format): Likewise.
	(libc_cv_ehdr_start): Likewise.
	* aclocal.m4 (LIBC_TRY_LINK_STATIC): Likewise.
	(LIBC_LINKER_FEATURE): Likewise.
	(LIBC_COMPILER_BUILTIN_INLINED): Likewise.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	* elf/Makefile (dummy-stack-chk-fail): New.
	(librtld.map): Use it.

2016-12-21  Nick Alcock  <nick.alcock@oracle.com>

	[BZ #7065]
	Compile the dynamic linker without stack protection.
	* elf/Makefile (elide-stack-protector): New.